@@ -24,6 +24,10 @@
 # FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 # OTHER DEALINGS IN THE SOFTWARE.
 
+# http://mp3val.sourceforge.net/
+# http://phwip.wordpress.com/home/audio/
+# http://wiki.hydrogenaudio.org/index.php?title=APE_Tags_Header
+
 import os
 import struct
 
@@ -69,7 +73,7 @@ class Mp3Reader(object):
 		begin_main_content = 0
 		
 		# parse the whole file immediately!
-		# 1) check for IDv2 (beginning of mp3 file)
+		# 1) check for ID3v2 (beginning of mp3 file)
 		#The ID3v2 tag size is the size of the complete tag after
 		#unsychronisation, including padding, excluding the header but not
 		#excluding the extended header (total tag size - 10). Only 28 bits
@@ -94,21 +98,73 @@ class Mp3Reader(object):
 			idv2_block = Block(begin_main_content, "ID3", 0)
 			self.blocks.append(idv2_block)
 			
-		# 2) check for IDv1 (last 128 bytes of mp3 file)
+		# 2) check for ID3v1 (last 128 bytes of mp3 file)
+		end_meta_data_offset = self._file_length
 		self._mp3_stream.seek(-128, os.SEEK_END)
 		idv1_start_offset = self._mp3_stream.tell()
 		first = self._mp3_stream.read(3)
-		idv1_block = None
 		if first == "TAG":
 			idv1_block = Block(128, "TAG", idv1_start_offset)
+			self.blocks.append(idv1_block)
+			end_meta_data_offset = idv1_start_offset
+			
+		# 3) check for http://id3.org/Lyrics3v2
+		# "The Lyrics3 block, after the MP3 audio and before the ID3 tag, 
+		# begins with the word "LYRICSBEGIN" after which a number of field 
+		# records follows. The Lyrics3 block ends with a six character size 
+		# descriptor and the string "LYRICS200". The size value includes the 
+		# "LYRICSBEGIN" string, but does not include the 6 character size 
+		# descriptor and the trailing "LYRICS200" string.
+		self._mp3_stream.seek(end_meta_data_offset - 6 - 9, os.SEEK_SET)
+		lyrics_footer = self._mp3_stream.read(6 + 9)
+		if lyrics_footer[6:] == "LYRICS200":
+			lyrics_size = int(lyrics_footer[:6]) # only header + body
+			lyrics3v2_block = Block(lyrics_size + 6 + 9, "LYRICS200",
+			                     end_meta_data_offset - (lyrics_size + 6 + 9))
+			self.blocks.append(lyrics3v2_block)
+			end_meta_data_offset -= (lyrics_size + 6 + 9)
 		
-		# 3) in between is SRS or MP3 data
+		# 4) check for http://id3.org/Lyrics3
+		self._mp3_stream.seek(end_meta_data_offset - 9, os.SEEK_SET)
+		if "LYRICSEND" == self._mp3_stream.read(9):
+			self._mp3_stream.seek(end_meta_data_offset - 5100, os.SEEK_SET)
+			lyrics_data = self._mp3_stream.read(5100)
+			index = lyrics_data.find("LYRICSBEGIN")
+			if index == -1:
+				raise InvalidDataException(
+						"Unable to find start of LyricsV1 block")
+			start_block = end_meta_data_offset - 5100 + index
+			lyrics3_block = Block(end_meta_data_offset - start_block,
+			                      "LYRICS", start_block)
+			self.blocks.append(lyrics3_block)
+			end_meta_data_offset -= lyrics3_block.size
+			
+		# 5) APE tags
+		# "Tag size in bytes including footer and all tag items excluding 
+		# the header to be as compatible as possible with APE Tags 1.000"
+		# "An APEv1 tag at the end of a file must have at least a footer, APEv1 
+		# tags may never be used at the beginning of a file 
+		# (unlike APEv2 tags)."
+		self._mp3_stream.seek(end_meta_data_offset - 32, os.SEEK_SET)
+		if "APETAGEX" == self._mp3_stream.read(8):
+			(version,) = S_LONG.unpack(self._mp3_stream.read(4))
+			if version == 2000:
+				header = 32
+			else: # 1000
+				header = 0
+			(size,) = S_LONG.unpack(self._mp3_stream.read(4))
+			start_block = end_meta_data_offset - size - header
+			apev2_block = Block(end_meta_data_offset - start_block,
+			                    "APE%s" % version, start_block)
+			self.blocks.append(apev2_block)
+			end_meta_data_offset -= apev2_block.size
+			
+		self._mp3_stream.seek(0, os.SEEK_SET)
+		
+		# in between is SRS or MP3 data
 		self._mp3_stream.seek(begin_main_content, os.SEEK_SET)
 		(sync,) = BE_SHORT.unpack(self._mp3_stream.read(2))
-		if idv1_block:
-			main_size = idv1_start_offset - begin_main_content
-		else:
-			main_size = idv1_start_offset + 128 - begin_main_content
+		main_size = end_meta_data_offset - begin_main_content
 		if sync & 0xFFE0 == 0xFFE0:
 			mp3_data_block = Block(main_size, "MP3", begin_main_content)
 			self.blocks.append(mp3_data_block)
@@ -120,7 +176,10 @@ class Mp3Reader(object):
 				try:
 					marker = self._mp3_stream.read(4)
 					# size includes the 8 bytes header
-					(size,) = S_LONG.unpack(self._mp3_stream.read(4))
+					if marker == "fLaC": # FLAC with ID3 tags
+						size = end_meta_data_offset - cur_pos
+					else:
+						(size,) = S_LONG.unpack(self._mp3_stream.read(4))
 				except:
 					raise InvalidDataException("Not enough SRS data")
 				srs_block = Block(size, marker, cur_pos)
@@ -128,9 +187,9 @@ class Mp3Reader(object):
 				cur_pos += size
 				if size == 0:
 					raise InvalidDataException("SRS size field is zero")
-				
-		if idv1_block:
-			self.blocks.append(idv1_block)
+			
+		# the order of which we add blocks doesn't matter this way
+		self.blocks.sort(key=lambda block: block.start_pos)
 			
 	def read(self):
 		for block in self.blocks:
